--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
 		<title>PlayCover</title>
-		<link href="../css/styles.css" rel="stylesheet" />
-		<link rel="shortcut icon" type="image/jpg" href="../assets/favicon.png" />
-		<script src="../js/local-storage-track.js"></script>
+		<link href="/css/styles.css" rel="stylesheet" />
+		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
+		<script src="/js/local-storage-track.js"></script>
 
 		<!-- splide JS -->
-		<link href="../css/splide.min.css" rel="stylesheet" />
-		<link href="../css/splide-core.min.css" rel="stylesheet" />
+		<link href="/css/splide.min.css" rel="stylesheet" />
+		<link href="/css/splide-core.min.css" rel="stylesheet" />
 
 		<!-- fonts import -->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +33,7 @@
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
 					<a href="/" class="flex items-center">
-						<img class="h-9 rounded-lg" src="../assets/logo.svg" alt="" />
+						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
 				</div>
@@ -104,7 +104,7 @@
 						<svg class="dark:hidden h-8 fill-current text-gray-600" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" /></svg>
 
 						<!-- light icon -->
-						<img class="hidden dark:inline h-8" src="../assets/sun.svg" alt="" />
+						<img class="hidden dark:inline h-8" src="/assets/sun.svg" alt="" />
 					</button>
 				</div>
 
@@ -116,7 +116,7 @@
 						<svg class="dark:hidden h-8 fill-current text-gray-600" version="1.0" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 294 305"><path d="M119.2 36c-28.1 10-52 31-65.4 57.5C45 110.8 41 127.6 41 147.1c0 43.7 24.4 83.6 63 103.3 12.8 6.6 23.4 10 37.2 12 14 2.1 23.2 2 37.4-.4 45.3-7.8 82.8-43 93.4-87.8 1.1-4.7 1-5.5-.5-7.2-2.6-2.9-4.9-2.5-11.3 1.9-8.1 5.4-16.4 9.4-26.2 12.6-7 2.3-10.9 2.8-22.1 3.3-21.9.7-37.4-3.4-54.6-14.8-40.4-26.6-53.5-79.3-30.2-121.7 4.3-8 4.9-11.7 2-13.3-2.6-1.3-3.6-1.2-9.9 1z" /></svg>
 
 						<!-- light icon -->
-						<img class="hidden dark:inline h-7" src="../assets/sun.svg" alt="" />
+						<img class="hidden dark:inline h-7" src="/assets/sun.svg" alt="" />
 					</button>
 					<!-- nav button -->
 					<div class="flex items-center">
@@ -203,7 +203,7 @@
 					</div>
 
 					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[14rem] 2xl:max-h-[19rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[13.7rem] 2xl:max-h-[19rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.0)</h2>
 
@@ -224,11 +224,11 @@
 						<!-- bg gradient -->
 						<!-- <div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div> -->
 
-						<!-- <img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="../assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<!-- <img class="dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="../assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" /> -->
+						<img class="hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" /> -->
 
-						<img class="max-w-s md:max-w-3xl 2xl:max-w-4xl rounded-lg" src="assets/hero-image.png" alt="macbook with gameplay" />
+						<img class="relative max-w-s md:max-w-3xl 2xl:max-w-4xl rounded-lg" src="/assets/hero-image.png" alt="macbook with gameplay" />
 					</div>
 				</div>
 			</section>
@@ -243,64 +243,64 @@
 						<!-- genshin impact -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/genshin-impact-gameplay.jpeg" alt="Genshin Impact gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/genshin-impact-logo.png" alt="Genshin Impact logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/genshin-impact-gameplay.jpeg" alt="Genshin Impact gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/genshin-impact-logo.png" alt="Genshin Impact logo image" />
 							</div>
 						</li>
 
 						<!-- kart rider -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/kartrider-gameplay.png" alt="kart rider gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/kartrider-cover.jpeg" alt="kart rider logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/kartrider-gameplay.png" alt="kart rider gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/kartrider-cover.jpeg" alt="kart rider logo image" />
 							</div>
 						</li>
 
 						<!-- among us  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/Among us gameplay.jpeg" alt="among us gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/Among us logo.jpeg" alt="among us logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/Among us gameplay.jpeg" alt="among us gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/Among us logo.jpeg" alt="among us logo image" />
 							</div>
 						</li>
 
 						<!-- guardian tales  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/guardian-tales-gameplay.png" alt="Guardian Tales gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/Guardian-Tales-Cover.jpeg" alt="Guardian Tales logo image" />
 							</div>
 						</li>
 
 						<!-- wild rift -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/wildrift-gameplay.jpeg" alt="League of Legends Wild Rift gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/wildrift-logo.jpeg" alt="League of Legends Wild Rift logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/wildrift-gameplay.jpeg" alt="League of Legends Wild Rift gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/wildrift-logo.jpeg" alt="League of Legends Wild Rift logo image" />
 							</div>
 						</li>
 
 						<!-- honkai impact 3  -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/honkai-impact-3-gameplay.jpeg" alt="honkai impact 3 gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/honkai-impact-3-cover.jpeg" alt="honkai impact 3 logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/honkai-impact-3-gameplay.jpeg" alt="honkai impact 3 gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/honkai-impact-3-cover.jpeg" alt="honkai impact 3 logo image" />
 							</div>
 						</li>
 
 						<!-- arknights global -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/arknights-global-gameplay.jpeg" alt="arknights global gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/arknights-global-logo.png" alt="arknights global logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/arknights-global-gameplay.jpeg" alt="arknights global gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/arknights-global-logo.png" alt="arknights global logo image" />
 							</div>
 						</li>
 
 						<!-- mu archangel -->
 						<li class="splide__slide px-2 md:px-2" style="width: 10px">
 							<div class="group relative">
-								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/mu-archangel-gameplay.jpeg" alt="mu archangel gameplay image" />
-								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="../assets/mu-archangel-logo.jpeg" alt="mu archangel logo image" />
+								<img class="absolute opacity-100 group-hover:opacity-0 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/mu-archangel-gameplay.jpeg" alt="mu archangel gameplay image" />
+								<img class="absolute opacity-0 group-hover:opacity-100 slide-video border-2 border-gray-50 dark:border-black rounded-md transition duration-500 ease-out shadow-lg my-6 w-[120%] md:w-[100%] h-52 md:h-[15rem] 3xl:w-[150%]" src="/assets/mu-archangel-logo.jpeg" alt="mu archangel logo image" />
 							</div>
 						</li>
 					</ul>
@@ -419,10 +419,10 @@
 						<!-- Profispieler logos -->
 						<a href="mailto:ke@playcover.app">
 							<!-- light -->
-							<img class="dark:hidden h-16" src="../assets/ProPlayer-logo-light.jpg" alt="Pro Player Light Logo" />
+							<img class="dark:hidden h-16" src="/assets/ProPlayer-logo-light.jpg" alt="Pro Player Light Logo" />
 
 							<!-- dark -->
-							<img class="hidden dark:inline h-16" src="../assets/ProPlayer-logo-dark.jpg" alt="Pro Player Dark Logo" />
+							<img class="hidden dark:inline h-16" src="/assets/ProPlayer-logo-dark.jpg" alt="Pro Player Dark Logo" />
 						</a>
 
 						<!-- github -->
@@ -434,7 +434,7 @@
 
 						<!-- discord -->
 						<a href="https://discord.gg/FYVuF6CNzP" target="_blank" class="flex flex-col group">
-							<img class="h-9 pb-1 md:pb-[0]" src="../assets/discord.svg" alt="discord" />
+							<img class="h-9 pb-1 md:pb-[0]" src="/assets/discord.svg" alt="discord" />
 							<span class="group-hover:text-yellow-500 text-sm pt-1">Discord</span>
 						</a>
 					</div>
@@ -464,15 +464,15 @@
 		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a] animate-bounce animate-pulse"></div>
 
 		<!-- js -->
-		<script src="../js/language-button.js"></script>
-		<script src="../js/mobile-buttons.js"></script>
-		<script src="../js/dark-mode.js"></script>
-		<script src="../js/donate-popup.js"></script>
-		<script src="../js/auto-closer.js"></script>
-		<script src="../js/animator.js"></script>
+		<script src="/js/language-button.js"></script>
+		<script src="/js/mobile-buttons.js"></script>
+		<script src="/js/dark-mode.js"></script>
+		<script src="/js/donate-popup.js"></script>
+		<script src="/js/auto-closer.js"></script>
+		<script src="/js/animator.js"></script>
 
 		<!-- splide js -->
-		<script src="../js/splide.min.js"></script>
+		<script src="/js/splide.min.js"></script>
 		<script>
 			const config = {
 				type: "loop",
