modified contact details modal

--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -615,7 +615,7 @@
 		<section class="hidden donate-wrapper donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.7)] dark:bg-[rgba(0,0,0,0.7)]">
 			<!-- modal -->
 			<div class="w-screen h-screen flex flex-col items-center justify-center">
-				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-white dark:bg-[#1E1E1E] rounded-xl shadow">
+				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-white dark:bg-[#1E1E1E] rounded-lg shadow">
 					<!-- close button -->
 					<div class="relative pt-4">
 						<button class="donate-close-button absolute top-5 lg:top-4 left-[7.5rem] lg:left-48">
