--- a/public/index.html
+++ b/public/index.html
@@ -327,25 +327,25 @@
 		</div>
 
 		<!-- donate popup -->
-		<section class="hidden donate-wrapper donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.8)] dark:bg-[rgba(0,0,0,0.7)]">
+		<section class="hidden donate-wrapper donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.8)] dark:bg-[rgba(0,0,0,0.8)]">
 			<!-- modal -->
 			<div class="w-screen h-screen flex flex-col items-center justify-center">
-				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-white dark:bg-[#1E1E1E] rounded-lg shadow">
+				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-gradient-to-l from-purple-900 to-[#C33764] rounded-lg shadow">
 					<!-- close button -->
 					<div class="relative pt-4">
 						<button class="donate-close-button absolute top-5 lg:top-4 left-[7.5rem] lg:left-48">
-							<svg xmlns="http://www.w3.org/2000/svg" class="dark:text-gray-400 scale-125 lg:scale-100 hover:scale-125 transition duration-300 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<svg xmlns="http://www.w3.org/2000/svg" class="text-gray-100 scale-125 lg:scale-100 hover:scale-125 transition duration-300 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
 							</svg>
 						</button>
 					</div>
 
 					<!-- text -->
-					<p class="pt-12 pb-8 font-light text-gray-700 dark:text-gray-300 text-3xl">Donate via...</p>
+					<p class="pt-12 pb-8 font-light text-white text-3xl">Donate via...</p>
 
 					<!-- donate options -->
 					<div class="flex items-center pb-4 space-x-4 px-8 lg:px-0">
-						<a class="donate-button hover:scale-105 transition duration-300" href="https://www.paypal.com/paypalme/playcoverapp" target="_blank">
+						<a class="donate-button drop-shadow-lg hover:scale-105 transition duration-300" href="https://www.paypal.com/paypalme/playcoverapp" target="_blank">
 							<svg class="w-32 lg:w-[10rem]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700.00002 700">
 								<path d="M545.86716257 794.2835428h-39.7503503c-2.70999399 0-5.03527067 1.98016262-5.45393362 4.66186858l-16.07326291 101.92179911c-.31682602 2.00845066 1.23901604 3.82454267 3.27575474 3.82454267h20.39001743c1.89529851 0 3.51903187-1.38045623 3.81322746-3.25878192l4.56568925-28.8934015c.41866295-2.68170596 2.73262442-4.66186858 5.45393363-4.66186858h12.57686147c26.18340751 0 41.28921954-12.6673832 45.23822957-37.78150289 1.77648876-10.98141615.0792065-19.6149252-5.06921632-25.65725001-5.64629228-6.64768881-15.67157277-10.15540546-28.9669504-10.15540546zm4.58831968 37.22139974c-2.17252128 14.26848611-13.06907332 14.26848611-23.6091961 14.26848611h-6.00272155l4.20925998-26.6360161c.25459234-1.61241814 1.64070617-2.80051572 3.27009713-2.80051572h2.74393964c7.17950392 0 13.9573177 0 17.44806153 4.09045022 2.09331478 2.44408644 2.73262442 6.06495524 1.94055937 11.07759549z" fill="#009cde" />
 								<path
@@ -377,7 +377,7 @@
 								</g>
 							</svg>
 						</a>
-						<a class="donate-button hover:scale-105 transition duration-300" href="https://www.patreon.com/playcoverapp" target="_blank">
+						<a class="donate-button drop-shadow-lg hover:scale-105 transition duration-300" href="https://www.patreon.com/playcoverapp" target="_blank">
 							<svg class="w-32 lg:w-[10rem] fill-current text-[#EB5758] pt-1" version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2400 1812">
 								<g>
 									<path
@@ -392,7 +392,7 @@
 		</section>
 
 		<!-- contact popup -->
-		<section class="hidden contact-wrapper contact-popup z-40 fixed w-[100vw] h-screen bg-[rgba(0,0,0,0.8)] dark:bg-[rgba(0,0,0,0.7)]">
+		<section class="hidden contact-wrapper contact-popup z-40 fixed w-[100vw] h-screen bg-[rgba(0,0,0,0.8)] dark:bg-[rgba(0,0,0,0.8)]">
 			<!-- modal -->
 			<div class="w-[100vw] h-screen flex flex-col items-center justify-center">
 				<div class="contact-modal flex flex-col items-center w-[22rem] md:w-[35rem] bg-white dark:bg-[#1E1E1E] rounded-lg shadow bg-gradient-to-tl from-[#5C258D] to-[#4389A2]">
