--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -519,15 +519,15 @@
 
 				<!-- line -->
 				<section class="w-100% flex justify-center">
-					<hr class="h-px mt-4 mb-6 w-[100%] bg-gray-300 dark:bg-gray-400 border-none" />
+					<hr class="h-px my-5 w-[100%] bg-gray-300 dark:bg-gray-400 border-none" />
 				</section>
 
 				<!-- below line -->
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
-					<div class="md:divide-x divide-gray-300 dark:divide-gray-600 flex items-center">
-						<a href="../legal-notice/" class="pr-3 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
-						<a href="mailto:ke@playcover.app" class="pl-3 underline hover:text-yellow-500">Copyright Claims</a>
+					<div class="flex items-center">
+						<a href="../legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left inline">Legal Notice</a>
+						<a href="mailto:ke@playcover.app" class="underline hover:text-yellow-500">Copyright Claims</a>
 					</div>
 
 					<p class="inline">2021 ProfiSpieler © (BeiJing) Culture Development. Co. Ltd. All rights reserved.</p>
