--- a/public/index.html
+++ b/public/index.html
@@ -330,7 +330,7 @@
 		<section class="hidden donate-wrapper donate-popup z-40 fixed w-screen h-screen bg-[rgba(0,0,0,0.8)] dark:bg-[rgba(0,0,0,0.8)]">
 			<!-- modal -->
 			<div class="w-screen h-screen flex flex-col items-center justify-center">
-				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-gradient-to-l from-purple-900 to-[#C33764] rounded-lg shadow">
+				<div class="donate-modal flex flex-col items-center lg:w-[30rem] bg-gradient-to-bl from-purple-900 to-[#C33764] rounded-lg shadow">
 					<!-- close button -->
 					<div class="relative pt-4">
 						<button class="donate-close-button absolute top-5 lg:top-4 left-[7.5rem] lg:left-48">
