--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,20 @@
 										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 简体中文 </a>
 									</li>
 									<li>
-										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> русский </a>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Русский </a>
 									</li>
 									<li>
-										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsche </a>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> français </a>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
+									</li>
+									<li>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
+									</li>
+
+									<li>
+										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 한국어 </a>
 									</li>
 									<li>
 										<a href="#" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Español </a>
@@ -153,11 +160,13 @@
 					<div class="mobile-language-menu hidden">
 						<div class="w-screen bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-3 place-items-center py-4 px-3 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
 							<a href="">简体中文</a>
-							<a href="">русский</a>
-							<a href="">Deutsche</a>
-							<a href="">français</a>
+							<a href="">Pусский</a>
+							<a href="">Deutsch</a>
+							<a href="">ホーム </a>
 							<a href="">Español</a>
 							<a href="">繁体中文</a>
+							<a href="">한국어</a>
+							<a href="" class="flex flex-col items-center justify-center">Bahasa <span>Indonesia</span> </a>
 						</div>
 					</div>
 
