--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
 				</div>
 			</div>
 			<!-- mobile menu -->
-			<div class="mobile-menu hidden relative">
+			<div class="mobile-menu max-h-[80vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Home</a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
@@ -181,7 +181,7 @@
 		<!-- content -->
 		<main>
 			<!-- hero section -->
-			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-28 2xl:space-x-48 md:pl-10 pt-28 pb-4 md:pb-4 lg:mt-auto">
+			<section id="hero-content" class="flex flex-col items-center lg:items-start lg:flex-row justify-center space-y-10 lg:space-y-0 lg:space-x-24 2xl:space-x-48 pt-28 pb-4 md:pb-8 lg:mt-auto">
 				<!-- text -->
 				<div id="hero-text" class="flex flex-col space-y-6">
 					<!-- intro text -->
@@ -212,7 +212,7 @@
 					</div>
 
 					<!-- build text -->
-					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17.5rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
+					<div id="latest-build-text" class="hidden group lg:flex rounded-lg max-h-[17.5rem] 2xl:max-h-[24rem] w-[27.7rem] cursor-default border-2 dark:border-[#3d3d3d] hover:border-transparent dark:hover:border-transparent hover:shadow-lg hover:bg-white dark:hover:bg-[#363636] transition-all duration-300">
 						<div class="mt-6 mb-[24px] ml-8 mr-2 pr-2 overflow-hidden group-hover:overflow-y-auto text-gray-400 dark:text-[#636363] group-hover:text-gray-800 dark:group-hover:text-gray-200 transition-all duration-300 relative">
 							<h2 class="font-medium text-lg pb-4">Latest Update Info (0.7.0)</h2>
 
@@ -228,14 +228,14 @@
 				</div>
 
 				<!-- hero image -->
-				<div id="hero-image">
+				<div id="hero-image" class="pt-6">
 					<div class="group relative">
 						<!-- bg gradient -->
 						<!-- <div class="rounded-lg absolute -inset-0.5 bg-gradient-to-b from-red-500 to-yellow-500 blur opacity-30 dark:opacity-40 md:group-hover:opacity-50 md:dark:group-hover:opacity-70 transform md:group-hover:scale-105 transition ease-out duration-1000 group-hover:duration-700"></div> -->
 
-						<img class="shadow-md hover:shadow-lg dark:hidden max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
+						<img class="shadow-md hover:shadow-lg dark:hidden max-w-xs md:max-w-[45rem] 2xl:max-w-[55rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="/assets/playcover-screenshot-light.png" alt="playcover screenshot light" />
 
-						<img class="shadow-md hover:shadow-lg hidden dark:block max-w-xs md:max-w-[27rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot dark" />
+						<img class="shadow-md hover:shadow-lg hidden dark:block max-w-xs md:max-w-[45rem] 2xl:max-w-[55rem] rounded-lg transition ease-out duration-1000 group-hover:duration-700 transform md:group-hover:scale-105" src="/assets/playcover-screenshot-dark.png" alt="playcover screenshot light" />
 					</div>
 				</div>
 			</section>
