--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -24,7 +24,7 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-montserrat transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-3 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
@@ -48,9 +48,11 @@
 				<div class="hidden xl:flex items-center space-x-5">
 					<!-- donate button -->
 					<div class="relative">
-						<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] my-auto transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
-							<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
-						</button>
+						<div class="h-[3.5rem] flex items-center">
+							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
+								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+							</button>
+						</div>
 					</div>
 
 					<!-- language button and menu-->
