--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -127,8 +127,9 @@
 					</div>
 				</div>
 			</div>
+
 			<!-- mobile menu -->
-			<div class="mobile-menu hidden relative">
+			<div class="mobile-menu max-h-[80vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
