--- a/public/legal-notice/index.html
+++ b/public/legal-notice/index.html
@@ -129,7 +129,7 @@
 			</div>
 
 			<!-- mobile menu -->
-			<div class="mobile-menu max-h-[80vh] overflow-auto hidden relative">
+			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="../" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="https://github.com/Letscoder/PlayCover/releases/download/0.6.2/PlayCover.0.6.2.zip" class="block text-gray-600 dark:text-gray-300">Download</a>
@@ -149,14 +149,16 @@
 						</div>
 					</button>
 					<!-- mobile language menu -->
-					<div class="mobile-language-menu hidden">
-						<div class="w-screen bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-3 place-items-center py-4 px-3 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
+					<div class="mobile-language-menu hidden rounded-lg">
+						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
 							<a href="">简体中文</a>
-							<a href="">русский</a>
-							<a href="">Deutsche</a>
-							<a href="">français</a>
+							<a href="">Pусский</a>
+							<a href="">Deutsch</a>
+							<a href="">ホーム </a>
 							<a href="">Español</a>
 							<a href="">繁体中文</a>
+							<a href="">한국어</a>
+							<a href="" class="flex flex-col items-center justify-center">Bahasa <span>Indonesia</span> </a>
 						</div>
 					</div>
 
