--- a/public/credits/index.html
+++ b/public/credits/index.html
@@ -195,66 +195,7 @@
 							<div class="flex items-center">
 								<!-- person -->
 								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
-									<p class="">Alexandr Forofeev -&nbsp;</p>
-									<a class="" href="mailto:alex@playcover.app">alex@playcover.app</a>
-								</div>
-							</div>
-						</div>
-
-						<!-- backend -->
-						<div class="space-x-1 flex items-start md:items-center">
-							<!-- icon -->
-							<div class="flex items-start md:items-center space-x-1">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-								</svg>
-								<!-- title -->
-								<p class="pt-[0.17rem] md:pt-0 font-semibold">Backend: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">Hades -&nbsp;</p>
-									<a class="" href="mailto:hades@playcover.app">hades@playcover.app</a>
-								</div>
-							</div>
-						</div>
-
-						<!-- API & Server: -->
-						<div class="space-x-1 flex items-start md:items-center">
-							<!-- icon -->
-							<div class="flex items-start md:items-center space-x-1">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 20 20" fill="currentColor">
-									<path fill-rule="evenodd" d="M9.504 1.132a1 1 0 01.992 0l1.75 1a1 1 0 11-.992 1.736L10 3.152l-1.254.716a1 1 0 11-.992-1.736l1.75-1zM5.618 4.504a1 1 0 01-.372 1.364L5.016 6l.23.132a1 1 0 11-.992 1.736L4 7.723V8a1 1 0 01-2 0V6a.996.996 0 01.52-.878l1.734-.99a1 1 0 011.364.372zm8.764 0a1 1 0 011.364-.372l1.733.99A1.002 1.002 0 0118 6v2a1 1 0 11-2 0v-.277l-.254.145a1 1 0 11-.992-1.736l.23-.132-.23-.132a1 1 0 01-.372-1.364zm-7 4a1 1 0 011.364-.372L10 8.848l1.254-.716a1 1 0 11.992 1.736L11 10.58V12a1 1 0 11-2 0v-1.42l-1.246-.712a1 1 0 01-.372-1.364zM3 11a1 1 0 011 1v1.42l1.246.712a1 1 0 11-.992 1.736l-1.75-1A1 1 0 012 14v-2a1 1 0 011-1zm14 0a1 1 0 011 1v2a1 1 0 01-.504.868l-1.75 1a1 1 0 11-.992-1.736L16 13.42V12a1 1 0 011-1zm-9.618 5.504a1 1 0 011.364-.372l.254.145V16a1 1 0 112 0v.277l.254-.145a1 1 0 11.992 1.736l-1.735.992a.995.995 0 01-1.022 0l-1.735-.992a1 1 0 01-.372-1.364z" clip-rule="evenodd" />
-								</svg>
-								<!-- title -->
-								<p class="pt-[0.10rem] md:pt-0 font-semibold">API & Server: &nbsp;</p>
-							</div>
-							<div class="md:pl-0 flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
-									<p class="">KeShui, ProfiSpieler</p>
-								</div>
-							</div>
-						</div>
-
-						<!-- website -->
-						<div class="space-x-1 flex items-start md:items-center">
-							<!-- icon -->
-							<div class="flex items-start md:items-center space-x-1">
-								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-								</svg>
-
-								<!-- title -->
-								<p class="font-semibold">Website: &nbsp;</p>
-							</div>
-							<div class="flex items-center">
-								<!-- person -->
-								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">AJ -&nbsp;</p>
-									<a class="" href="mailto:jay@playcover.app">jay@playcover.app</a>
+									<a class="" href="mailto:alex@playcover.app">Alexandr Forofeev</a>
 								</div>
 							</div>
 						</div>
@@ -273,8 +214,82 @@
 							<div class="flex items-center">
 								<!-- person -->
 								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
-									<p class="">ProfiSpieler -&nbsp;</p>
-									<a class="" href="mailto:ke@playcover.app">ke@playcover.app</a>
+									<a href="mailto:ke@playcover.app" class="">ProfiSpieler </a>
+								</div>
+							</div>
+						</div>
+
+						<!-- API & Server: -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 20 20" fill="currentColor">
+									<path fill-rule="evenodd" d="M9.504 1.132a1 1 0 01.992 0l1.75 1a1 1 0 11-.992 1.736L10 3.152l-1.254.716a1 1 0 11-.992-1.736l1.75-1zM5.618 4.504a1 1 0 01-.372 1.364L5.016 6l.23.132a1 1 0 11-.992 1.736L4 7.723V8a1 1 0 01-2 0V6a.996.996 0 01.52-.878l1.734-.99a1 1 0 011.364.372zm8.764 0a1 1 0 011.364-.372l1.733.99A1.002 1.002 0 0118 6v2a1 1 0 11-2 0v-.277l-.254.145a1 1 0 11-.992-1.736l.23-.132-.23-.132a1 1 0 01-.372-1.364zm-7 4a1 1 0 011.364-.372L10 8.848l1.254-.716a1 1 0 11.992 1.736L11 10.58V12a1 1 0 11-2 0v-1.42l-1.246-.712a1 1 0 01-.372-1.364zM3 11a1 1 0 011 1v1.42l1.246.712a1 1 0 11-.992 1.736l-1.75-1A1 1 0 012 14v-2a1 1 0 011-1zm14 0a1 1 0 011 1v2a1 1 0 01-.504.868l-1.75 1a1 1 0 11-.992-1.736L16 13.42V12a1 1 0 011-1zm-9.618 5.504a1 1 0 011.364-.372l.254.145V16a1 1 0 112 0v.277l.254-.145a1 1 0 11.992 1.736l-1.735.992a.995.995 0 01-1.022 0l-1.735-.992a1 1 0 01-.372-1.364z" clip-rule="evenodd" />
+								</svg>
+								<!-- title -->
+								<p class="w-28 md:w-auto pt-[0.10rem] md:pt-0 font-semibold">API & Server: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-center">
+									<p class="">KeShui, ProfiSpieler</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- discord community manager -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 3v4M3 5h4M6 17v4m-2-2h4m5-16l2.286 6.857L21 12l-5.714 2.143L13 21l-2.286-6.857L5 12l5.714-2.143L13 3z" />
+								</svg>
+
+								<!-- title -->
+								<p class="pt-[0.10rem] md:pt-0 font-semibold">Discord Community Manager: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
+									<p class="">Sloooopie</p>
+								</div>
+							</div>
+						</div>
+
+						<!-- backend -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+								</svg>
+								<!-- title -->
+								<p class="pt-[0.17rem] md:pt-0 font-semibold">Backend: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
+									<a class="" href="mailto:hades@playcover.app">Hades</a>
+								</div>
+							</div>
+						</div>
+
+						<!-- website -->
+						<div class="space-x-1 flex items-start md:items-center">
+							<!-- icon -->
+							<div class="flex items-start md:items-center space-x-1">
+								<svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+								</svg>
+
+								<!-- title -->
+								<p class="font-semibold">Website: &nbsp;</p>
+							</div>
+							<div class="flex items-center">
+								<!-- person -->
+								<div class="pt-[0.10rem] dark:divide-gray-600 flex flex-col md:flex-row items-start md:items-center">
+									<a class="" href="mailto:jay@playcover.app">AJ</a>
 								</div>
 							</div>
 						</div>
@@ -335,8 +350,8 @@
 								</div>
 							</div>
 							<div class="pt-1 pl-9">
+								<p>All the mods</p>
 								<p>All the supporters</p>
-								<p>Slopie and all the mods for FAQ</p>
 								<p>LingFei.Shengtian for ARM Support and Services</p>
 							</div>
 						</div>
